# desktop-app

./: package.json  vite.config.js
.github/workflows/: build.yml  clippy.yml  test.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs
src-tauri/src/classes/: auth_request.rs  auth_response.rs  mod.rs  request_error.rs
src/assets/: base.css  login.css  main.css
src/components/: Footer.vue  HeaderLogo.vue  NavBar.vue
src/composables/: useAuth.js
src/lib/: jwt.ts  stronghold.ts
src/router/: index.js
src/views/: AuthView.vue  HomeView.vue  MainServiceView.vue  MainUsersView.vue  MainView.vue  SignInView.vue
