[package]
name = "whatever-desktop"
version = "0.1.0"
description = "Desktop app for managers"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whatever_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-stronghold = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
incremental = true
codegen-units = 256
opt-level = 0
debug = true
strip = false

[profile.fast-release]
inherits = "release"
panic = "abort"
codegen-units = 256
lto = false
opt-level = 0
debug = true
strip = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

